Fix edit labels spacing, use consistent page header class

--- a/frontend/pages/labels/NewLabelPage/_styles.scss
+++ b/frontend/pages/labels/NewLabelPage/_styles.scss
@@ -2,7 +2,7 @@
   &__header {
     display: flex;
     flex-direction: column;
-    gap: $pad-smedium;
+    gap: $pad-xsmall;
     margin-bottom: $pad-large;
   }
   &__page-description {
